# qt-study

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  utility.cpp  utility.h
src/core/: CMakeLists.txt  codec_study.cpp  file_io_study.cpp  meta_object.cpp  std_paths_study.cpp  string_study.cpp
src/core/i18n/: CMakeLists.txt
src/core/i18n/arrow_pad/: CMakeLists.txt  arrow_pad.cpp  arrow_pad.h  main.cpp  main_window.cpp  main_window.h
src/core/i18n/arrow_pad/ts/: arrow_pad_zh_CN.ts  arrow_pad_zh_TW.ts
src/core/signals_slots/: CMakeLists.txt
src/core/signals_slots/counter/: CMakeLists.txt  counter.cpp  counter.h  main.cpp
src/gui/: CMakeLists.txt  font_study.cpp
src/gui/toolbar/: CMakeLists.txt  main.cpp  toolbar.cpp  toolbar.h
src/gui/toolbar/resources/: CMakeLists.txt  export.def  toolbar.qrc
src/key_event/: CMakeLists.txt  main.cpp  my_widget.cpp  my_widget.h  my_window.cpp  my_window.h
src/opengl/: CMakeLists.txt
src/opengl/texture/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  ogl_widget.cpp  ogl_widget.h
src/opengl/triangle/: CMakeLists.txt  ogl_widget.cpp  ogl_widget.h
src/paint/: CMakeLists.txt  my_widget.cpp  my_widget.h  my_window.cpp  my_window.h
src/qml_backend/: CMakeLists.txt  README.txt  backend.cpp  main.cpp  main.qml
src/qml_minimal/: CMakeLists.txt  README.txt  main.cpp  main.qml
